--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "source-map-explorer": "^2.5.2"
   },
   "lint-staged": {
-    "*.js": "prettier --write",
+    "*.js": "prettier --write --ignore-unknown",
     "*.json": "prettier --write --ignore-unknown"
   }
 }
