--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 REACT_APP_NETWORK_ID=56
-REACT_APP_API_URL=https://api.beefy.finance
+REACT_APP_API_URL=https://api.yearn.finance/v1/chains/250/vaults/all
 PUBLIC_URL=''
 IMAGE_INLINE_SIZE_LIMIT=0
