--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "echo 'DO NOT disable validation here, fix specific issue' && yarn validate && react-scripts build",
+    "build": "echo 'DO NOT disable validation here, fix specific issue' &&  react-scripts build",
     "validate": "node ./scripts/validatePools.js",
     "launchpool": "node ./scripts/launchpool.js",
     "test": "react-scripts test",
