make optimism work

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,7 @@ REACT_APP_NETWORK_ID=56
 REACT_APP_API_URL=https://api.yearn.finance/v1/chains/250/vaults/all
 PUBLIC_URL=''
 IMAGE_INLINE_SIZE_LIMIT=0
+REACT_APP_FANTOM_RPC=
+REACT_APP_POLYGON_RPC=
+REACT_APP_ARBITRUM_RPC=
+REACT_APP_OPTIMISM_RPC=
